style-remove unnecessary border

--- a/src/App.css
+++ b/src/App.css
@@ -396,6 +396,7 @@ body {
     }
     .du-banner .searchBar input {
         text-align: center;
+        border: 0;
     }
     .du-banner .second-sec .firstBox {
         display: none;
